# Labs

AOIS/Add/DisjointSet/: disjoint_set.py
AOIS/Add/MerkleTree/: merkle.txt  merkle_tree.py
AOIS/Add/SuffixTree/: main.py  suffix_tree.py
AOIS/Lab1/: .gitignore  Makefile  go.mod  go.sum
AOIS/Lab2/: Cargo.toml  README.md
AOIS/Lab2/src/: lib.rs  main.rs
AOIS/Lab2/src/expression/: expression.rs  functions.rs  mod.rs
AOIS/Lab2/src/models/: vars.rs
AOIS/Lab2/src/parse/: check.rs  downgrade.rs  mod.rs  parsing.rs
AOIS/Lab2/src/parsing/: downgrade.rs  mod.rs  parsing.rs  str_ops.rs
AOIS/Lab2/src/vars/: mod.rs  vars.rs
AOIS/Lab3/: README.md  main.py  pyproject.toml
AOIS/Lab3/src/: __init__.py
AOIS/Lab3/src/fomulas/: __init__.py  area.py  constants.py  pcnf.py  pdnf.py
AOIS/Lab3/src/pcnf/: __init__.py  pcnf.py
AOIS/Lab3/src/table/: __init__.py  constants.py  table.py
AOIS/Lab4/: main.py  pyproject.toml
AOIS/Lab6/: .gitignore  README.md  mix.exs
AOIS/Lab7/: Cargo.toml
AOIS/Lab8/: main.py  out.txt
AOIS/lab7/: main.py  pyproject.toml
LOIS/Lab1/: Makefile  go.mod  go.sum  pyproject.toml
MOIS/Lab1/: l1.scs
MOIS/Lab2/: lab2_1.gwf  lab2_2.gwf
POIS/Lab1/: .flake8  Dockerfile  main.py  pyproject.toml
POIS/Lab1/app/: __init__.py  _errors.py  _settings.py  _utils.py
POIS/Lab1/app/api/: __init__.py  control.py
POIS/Lab1/app/backend/: __init__.py  server.py
POIS/Lab1/app/backend/api/: control.py
POIS/Lab1/app/backend/resources/: control.py
POIS/Lab1/app/models/: actions.py  fruit.py  place.py  seed.py  state.py  tree.py  vegetable.py
POIS/Lab1/app/simulation/: __init__.py  simulation.py
POIS/Lab1/config/: .env.example
POIS/Lab1/docker/: Dockerfile  entrypoint.sh
POIS/Lab2/: main.py  pyproject.toml
POIS/Lab2/src/: _meta.py  _settings.py  app.py
POIS/Lab2/src/components/: __init__.py  bar.py  table.py
POIS/Lab2/src/components/dialogs/: __init__.py  add_dialog.py  delete_dialog.py  filter_dialog.py
POIS/Lab2/src/config/: __init__.py  mongo.py  storage.py
POIS/Lab2/src/controllers/: __init__.py  controller.py  icontroller.py  root_controller.py
POIS/Lab2/src/models/: action.py  exam.py  lesson.py  student.py
POIS/Lab2/src/repositories/: __init__.py  student.py  students_repository.py
POIS/Lab2/src/storage/: mongo.py
POIS/Lab2/src/views/: __init__.py  iview.py  main_view.py  root_view.py
POIS/Lab3/: main.py  pyproject.toml
POIS/Lab3/src/: app.py  game.py
POIS/Lab3/src/config/: mongo.py
POIS/Lab3/src/models/: asteroid.py  base.py  missile.py  spaceship.py
POIS/Lab3/src/repository/: __init__.py  state.py
POIS/Lab3/src/storage/: mongo.py
POIS/Lab3/src/utils/: utils.py
POIS/Lab4/: main.py  pyproject.toml
(+92 files in other folders)
