[project]
name = "kitalab"
version = "0.0.1"
description = "POIS lab1 4 sem"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Alexandr Rutkovskij"},
]
maintainers = [
    {name = "Alexandr Rustkovskij", email = "kitanoyoru@protonmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "requests",
    "fastapi",
    "pymongo",
    'importlib-metadata; python_version<"3.8"',
]